--- a/CucumberFramework/pom.xml
+++ b/CucumberFramework/pom.xml
@@ -86,6 +86,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.2.5</version>
+			<scope>test</scope>
+		</dependency>
+
+
 		<!--
 		https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
 		<dependency>
